# lsp-io

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
crates/lsp-io-cli/: Cargo.toml
crates/lsp-io-cli/src/: main.rs
crates/lsp-io-cli/tests/: detect.rs
crates/lsp-io-core/: Cargo.toml
crates/lsp-io-core/src/: language.rs  lib.rs  progress.rs  sdl_mcp.rs
crates/lsp-io-core/src/config/: mod.rs
crates/lsp-io-core/src/server/: github_release.rs  github_specs.rs  install.rs  mod.rs  registry.rs
docs/: lsp-io-implementation-plan.md  sdl-mcp-integration.md
docs/superpowers/plans/: 2026-05-08-managed-github-release-archive-installer.md  2026-05-11-sdl-mcp-lsp-onboarding.md
gui/: index.html  package-lock.json  package.json
gui/src/: main.ts
gui/src/bridge/: tauri.ts
gui/src/components/: Dashboard.ts  IndexProgress.ts  Results.ts  Settings.ts  StatusBadge.ts  Titlebar.ts
gui/src/state/: store.ts
gui/src/styles/: animations.css  components.css  layout.css  theme.css
scripts/: install.ps1  install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
