[package]
name = "lsp-io-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
name = "lsp_io_core"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
xz2 = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
